--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -92,7 +92,7 @@ See: /home/doom/End/Cave/Ice/Xtal/Git/github.org
 
 ***** "Pro Git" by Scott Chacon and  Ben Straub
 Can read on-line, also can get from (spit) Amazon
-Source is at github: https://github.com/progit/progit2
+But source is at github: https://github.com/progit/progit2
 
 *** things you will not do with git
 **** work with binary files
