--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -54,7 +54,7 @@ git log --oneline | egrep 'created demo'
 **** to do and to notice
 ****** note: no sequential version numbers 
 ****** "commits" are SHA1 hashes
-******* they're long but you can abbreivate to 5 or 6 chars
+******* they're long but you can abbreviate to 5 or 6 chars
 ****** not file oriented: commits can include changes throughout the tree
 
 **** edit the file, check diff, commit
