--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -1,6 +1,6 @@
 * 69 cent tour of git
 ** some stops on the tour
-*** Using an existing git repo, e.g. 
+*** first stop: using an existing git repo, e.g. 
 **** https://github.com/doomvox/raku-study
 **** set-up to do if not done already:
 ***** create a github account
@@ -74,7 +74,7 @@ git commit -a -m'wtf?'
 git push -u origin main
 #+END_SRC
 
-*** new topic: create a new git repo
+*** second stop: create a new git repo
 ****  working standalone (without a server like github)
 ***** cd <where_ever>
 ***** git init
@@ -90,7 +90,7 @@ git push -u origin main
 
 **** resolving a merge conflict
 
-*** follow on topic: putting that new git repo on github
+*** third stop: putting that new git repo on github
 **** creating a new project at github
 **** associating existing repo with new project
 See: /home/doom/End/Cave/Ice/Xtal/Git/github.org
