--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -105,7 +105,7 @@ http://git-scm.com/book/en/v2/Git-Branching-Basic-Branching-and-Merging
 Can read on-line, also can get from (spit) Amazon
 But source is at github: https://github.com/progit/progit2
 
-*** things you will not do with git
+*** fifth stop: things you will not do with git
 **** work with binary files
 (compiled code, media files, ms word docs, etc)
 **** control your entire home directory
