--- a/notes/idioms.org
+++ b/notes/idioms.org
@@ -4,14 +4,16 @@ several ways of doing things in raku but one is favored.
 (The word "idiom" also gets used in a wider sense to just
 mean "a way to do it".)
 
-** from the docs
-The word idiom is used in *some* places in the docs.
-
+** blog posts
 *** utilpm piece from 2011 (perl5 things translated to raku):
 https://perl6advent.wordpress.com/2011/12/23/day-23-idiomatic-perl-6/
 
 *** recent piece by gfldex,  writing a wget in raku several different ways
 https://gfldex.wordpress.com/2021/04/16/all-your-idioms-are-belong-to-us/
+
+
+** from the docs
+The word idiom is used in *some* places in the docs.
 
 *** some idioms from the docs
 
