--- a/notes/idioms.org
+++ b/notes/idioms.org
@@ -13,7 +13,8 @@ https://gfldex.wordpress.com/2021/04/16/all-your-idioms-are-belong-to-us/
 
 
 ** from the docs
-The word idiom is used in *some* places in the docs.
+The docs uses the word "idiom" occasionally, sometimes indicating
+the kind of style recommendation I'm looking for.
 
 *** some idioms from the docs
 
