--- a/notes/idioms.org
+++ b/notes/idioms.org
@@ -2,7 +2,7 @@
 I'm looking for "recommended idioms", cases where there are
 several ways of doing things in raku but one is favored.  
 (The word "idiom" also gets used in a wider sense to just
-mean "a way to do it".)
+mean "a way to do it", or "the Raku way of doing it".)
 
 ** blog posts
 *** utilpm piece from 2011 (perl5 things translated to raku):
