--- a/notes/meeting_2021may02.org
+++ b/notes/meeting_2021may02.org
@@ -25,5 +25,5 @@ https://github.com/doomvox/raku-study/blob/main/notes/69cent_tour_git.md
 ** appendix: the usual links
 *** code examples
 https://github.com/doomvox/raku-study/tree/main/bin/2021may02
-*** meeting notes (material in this file)
+*** meeting notes (material from this file)
 https://github.com/doomvox/raku-study/tree/main/notes/meeting_2021may02.md
