--- a/notes/meeting_2021may02.org
+++ b/notes/meeting_2021may02.org
@@ -27,3 +27,7 @@ https://github.com/doomvox/raku-study/blob/main/notes/69cent_tour_git.md
 https://github.com/doomvox/raku-study/tree/main/bin/2021may02
 *** meeting notes (material from this file)
 https://github.com/doomvox/raku-study/tree/main/notes/meeting_2021may02.md
+*** SF Perl page, has links to mailing list
+http://sf.pm.org/
+*** perl6-users mailing list archive
+https://www.nntp.perl.org/group/perl.perl6.users/
