--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -74,6 +74,10 @@ git commit -a -m'wtf?'
 git push -u origin main
 #+END_SRC
 
+#+BEGIN_SRC sh
+git show REVISION:path/to/file
+#+END_SRC
+
 *** second stop: create a new git repo
 ****  working standalone (without a server like github)
 ***** cd <where_ever>
