--- a/notes/meeting_2021may02.org
+++ b/notes/meeting_2021may02.org
@@ -13,6 +13,8 @@ https://github.com/doomvox/raku-study/blob/main/notes/69cent_tour_git.md
 **** is anything ever cast automatically
 *** raku classes as data containers
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/data_container_class.raku
+*** programming in the large
+larger applications
 
 ** ongoing
 *** raku idioms
