--- a/notes/meeting_2021may02.org
+++ b/notes/meeting_2021may02.org
@@ -14,7 +14,7 @@ https://github.com/doomvox/raku-study/blob/main/notes/69cent_tour_git.md
 *** raku classes as data containers
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/data_container_class.raku
 *** programming in the large
-larger applications
+**** larger applications
 
 ** ongoing
 *** raku idioms
