--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -64,9 +64,8 @@ git log --oneline | egrep 'created demo'
 echo "say 'goodbye';" >> hello.raku
 git status
 git diff
-git commit -m 'added goodbye line to hello.raku'
 git commit -a -m 'added goodbye line to hello.raku'
-git log -3
+git log -n 3
 git diff
 git diff <commit1> <commit2>
 git pull
