--- a/notes/meeting_2021may02.org
+++ b/notes/meeting_2021may02.org
@@ -8,6 +8,8 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021may02/
 ** agenda stuff
 *** 69 cent tour of git and github
 https://github.com/doomvox/raku-study/blob/main/notes/69cent_tour_git.md
+*** bruce gray on his discrete fourier transform solution:
+http://rosettacode.org/wiki/Discrete_Fourier_transform#Raku
 *** bruce gray rosetta code entry:  https://rosettacode.org/wiki/Tree_from_nesting_levels#Raku 
 *** type system: what is accepted by what 
 **** is anything ever cast automatically
