--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -92,8 +92,10 @@ git show REVISION:path/to/file
 *.[oa]
 #+END_SRC 
 ***** .git/info/exclude
-
-**** resolving a merge conflict
+**** 
+#+BEGIN_SRC sh
+git init ; git add . ; git commit -m 'Initial commit'
+#+END_SRC
 
 *** third stop: putting that new git repo on github
 **** creating a new project at github
