--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -1,2 +1,4 @@
 * meeting notes May 16, 2021
 ** agenda stuff
+*** bruce gray rosettacode entries
+**** http://rosettacode.org/wiki/Coprime_triplets#Raku
