--- a/notes/meeting_2021may02.org
+++ b/notes/meeting_2021may02.org
@@ -9,7 +9,7 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021may02/
 https://github.com/doomvox/raku-study/blob/main/notes/69cent_tour_git.md
 *** bruce gray on his discrete fourier transform solution:
 http://rosettacode.org/wiki/Discrete_Fourier_transform#Raku
-*** bruce gray rosetta code entry:  https://rosettacode.org/wiki/Tree_from_nesting_levels#Raku 
+*** bruce gray rosetta code entry (skipped this time):  https://rosettacode.org/wiki/Tree_from_nesting_levels#Raku 
 *** type system: what is accepted by what 
 **** is anything ever cast automatically
 *** raku classes as data containers
