--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -2,3 +2,9 @@
 ** agenda stuff
 *** bruce gray rosettacode entries
 **** http://rosettacode.org/wiki/Coprime_triplets#Raku
+**** https://rosettacode.org/wiki/Tree_from_nesting_levels#Raku 
+*** raku classes as data containers (skipped)
+**** https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/data_container_class.raku
+** ongoing
+*** programming in the large (david christensen)
+**** larger applications
