--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -10,6 +10,10 @@
 **** /home/doom/End/Cave/Perl6/Wall/raku-study/bin/2021may02/mixing_named_args_and_positional_ones.raku
 *** raku classes as data containers
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/data_container_class.raku
+*** super flat
+https://stackoverflow.com/questions/67515479/what-is-a-simple-and-elegant-way-to-flatten-lists-or-arrays-of-arbitrary-depths
+https://stackoverflow.com/questions/41648119/how-can-i-completely-flatten-a-list-of-lists-of-lists
+
 *** type system: what is accepted by what  
 **** is anything ever cast automatically
 ***** when can you Cool
