--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -22,6 +22,10 @@
 **** is anything ever cast automatically
 ***** when can you Cool
 
+*** debian sysadmin issue (david christensen)
+
+*** higher-order programming as a substitute for macros (perl5)  (david christensen)
+
 ** ongoing
 *** programming in the large (david christensen)
 **** larger applications
