--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -28,6 +28,9 @@
 *** debian sysadmin issue (david christensen)
 *** higher-order programming as a substitute for macros (perl5)  (david christensen)
 
+*** bill one-liner attempt, removing hyphens
+
+
 ** ongoing
 *** programming in the large (david christensen)
 **** larger applications
