--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -30,6 +30,9 @@
 dell two slots 4gb, certain dells have quiet motherboard
 upgrades, two 8gb, 16gb, dual channel memory.  good for
 virtualization.  SSD sata drive bay (sata two or three?)
+nvidia optimus (two graphics spliced together) 
+debian version 7 wouldn't boot, video issues.  eventually fixed.
+
 
 
 *** higher-order programming as a substitute for macros (perl5)  (david christensen)
