--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -40,7 +40,8 @@ interested in debian 10, may have it fixed
 (I'm planning on 10.9).
 bg: bumblebee?  david: no.  
 https://wiki.debian.org/Bumblebee 
-intel model 520 ssds
+intel model 520 ssds  enterprise desktop drive, sata 3,
+self-encrypting (?)
 
 *** higher-order programming as a substitute for macros (perl5)  (david christensen)
 
