--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -41,7 +41,7 @@ interested in debian 10, may have it fixed
 bg: bumblebee?  david: no.  
 https://wiki.debian.org/Bumblebee 
 intel model 520 ssds  enterprise desktop drive, sata 3,
-self-encrypting (?), on linux uses em-crypt for swap, nbr
+self-encrypting (?), on linux uses dm-crypt for swap, nbr
 partitioning, not gpt.  1gig unencrypted boot partition.
 
 *** higher-order programming as a substitute for macros (perl5)  (david christensen)
