--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -43,6 +43,7 @@ https://wiki.debian.org/Bumblebee
 intel model 520 ssds  enterprise desktop drive, sata 3,
 self-encrypting (?), on linux uses dm-crypt for swap, nbr
 partitioning, not gpt.  1gig unencrypted boot partition.
+overprovisioning 
 
 *** higher-order programming as a substitute for macros (perl5)  (david christensen)
 
