--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -49,7 +49,7 @@ flash drive.
 samsung gb ssd performed better than usb drives, dram cache
 burn up a sata slot.
 
-cvs server
+seperate version control server can help.
 
 *** higher-order programming as a substitute for macros (perl5)  (david christensen)
 
