--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -53,7 +53,7 @@ seperate version control server can help.
 
 *** higher-order programming as a substitute for macros (perl5)  (david christensen)
 
-predicate functions, "is_string" etc.
+predicate functions, "is_string" etc.  demo of small function approach
 
 *** bill one-liner attempt, removing soft hyphens
 https://practicaltypography.com/hyphenation.html 
