--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -79,7 +79,9 @@ http://sf.pm.org/
 https://www.nntp.perl.org/group/perl.perl6.users/
 
 ** bits
-bg summarizes
+
+*** bg summarizes
 fosdem codesection langs for opensource  corporate backed typescript go java
 raku optimized in other ways
 
+*** 
