--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -84,4 +84,6 @@ https://www.nntp.perl.org/group/perl.perl6.users/
 fosdem codesection langs for opensource  corporate backed typescript go java
 raku optimized in other ways
 
-*** 
+*** announced: going to skip next sunday, thinking about going with every-other week format
+suggestion: have someone else host perl5 meetings on the
+off-weeks.  david christensen is interested. 
