--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -37,7 +37,7 @@ new used laptop win10
 debian 10 was n.g. sam video problem
 debian 9 needed some point revisions to get there 
 interested in debian 10, may have it fixed
-(I'm planning on 10.9).
+(Note: I've got debian 10.9 slated to install).
 
 bg: bumblebee?  david: no.  
 https://wiki.debian.org/Bumblebee 
