--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -80,7 +80,7 @@ git show REVISION:path/to/file
 #+END_SRC
 *** second stop: create a new git repo
 ****  working standalone (without a server like github)
-***** cd <your_dev_tree>
+***** cd ~/dev/myproject
 ***** git init
 ***** git add
 ***** git status
