--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -111,6 +111,9 @@ http://git-scm.com/book/en/v2/Git-Branching-Basic-Branching-and-Merging
 Can read on-line, also can get from (spit) Amazon
 But source is at github: https://github.com/progit/progit2
 
+***** alan recommends:
+https://opensource.com/article/21/4/context-switching-git?sc_cid=7016000000127ECAAY
+
 **** there's a command line tool to do github manipulations without the damn website UI
 https://cli.github.com/
 
