--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -28,7 +28,7 @@
 
 *** david christensen talked about a few debian sysadmin issues
 **** summary: debian 10.9 is mature enough to deal with all display hardware
-**** rought notes:
+**** rough notes:
 dell two slots 4gb, certain dells have quiet motherboard
 upgrades, two 8gb, 16gb, dual channel memory.  good for
 virtualization.  SSD sata drive bay (sata two or three?)
@@ -36,7 +36,7 @@ nvidia optimus (two graphics spliced together)
 debian version 7 wouldn't boot, video issues.  eventually fixed.
 put win7 pro on it for awhile, support yanked 1.5 
 new used laptop win10
-debian 10 was n.g. sam video problem
+debian 10 was n.g. same video problem
 debian 9 needed some point revisions to get there 
 interested in debian 10, may have it fixed
 (Note: I've got debian 10.9 slated to install).
