--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -53,6 +53,9 @@ samsung gb ssd performed better than usb drives, dram cache
 burn up a sata slot.
 
 *** higher-order programming as a substitute for macros (perl5)  (david christensen)
+As a demo of functional programming, david christensen showed us
+his code for generating type validation predicate functions.
+
 predicate functions, "is_string" etc.  demo of a small routine functional approach.
 
 **** bruce gray suggests Params::Util
