--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -70,7 +70,7 @@ his code for generating type validation predicate functions
 **** a package I wrote that does something similar
 ***** https://metacpan.org/pod/Scalar::Classify
 ****** comparing david's code to mine:
-******* david's is certainly tighter
+******* david's is certainly tighter, and is very consistent
 ******* mine does fewer sub calls-- probably performs better
 ******* returns and expanded set of string codes like the built-in "ref"
 ******** need to do string comparisons later might seem inelegant
