--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -57,23 +57,20 @@ As a demo of functional programming, david christensen showed us
 his code for generating type validation predicate functions
 ("is_string", etc). 
 
-**** other ways of handling the problem
+**** other approaches
 
-
-
-
-**** bruce gray suggests Params::Util
+***** bruce gray suggests Params::Util
 ***** https://metacpan.org/pod/Params::Util
-**** there are a number of cpan modules to do parameter validation, e.g 
-***** https://metacpan.org/pod/Type::Tiny#Predicate-methods
-***** https://metacpan.org/pod/Params::ValidationCompiler
-**** a package I wrote that does something similar
-***** https://metacpan.org/pod/Scalar::Classify
-****** comparing david's code to mine:
-******* david's is certainly tighter, and is very consistent
-******* mine does fewer sub calls-- probably performs better
-******* mine returns an expanded set of string codes like the built-in "ref"
-******** need to do string comparisons later might seem inelegant
+***** there are a number of cpan modules to do parameter validation, e.g 
+****** https://metacpan.org/pod/Type::Tiny#Predicate-methods
+****** https://metacpan.org/pod/Params::ValidationCompiler
+***** a package I wrote that does something similar
+****** https://metacpan.org/pod/Scalar::Classify
+******* comparing david's code to mine:
+******** david's is certainly tighter, and is very consistent
+******** mine does fewer sub calls-- probably performs better
+******** mine returns an expanded set of string codes like the built-in "ref"
+********* need to do string comparisons later might seem inelegant
 
 *** bill one-liner attempt, removing soft hyphens
 https://practicaltypography.com/hyphenation.html 
