--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -131,3 +131,5 @@ off-weeks.  david christensen is interested.
 
 https://github.com/Raku/Raku-Steering-Council/blob/main/announcements/20200720.md
 
+*** steve yegge, a fascinating perl hater:
+https://steve-yegge.blogspot.com/
