--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -135,3 +135,7 @@ https://github.com/Raku/Raku-Steering-Council/blob/main/announcements/20200720.m
 https://steve-yegge.blogspot.com/
 
 **** Bruce Gray : "For most people the perceived usefulness of a computer language is inversely proportional to the number of theoretical axes the language intends to grind."  -- Larry Wall
+
+*** a defense of perl/raku talk
+
+https://www.fosdem.org/2021/schedule/event/programming_lang_for_free_software/
