--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -94,6 +94,13 @@ Hy­phen­ation is the au­to­mated process of break­ing words be­tween lines
 $text_no_gs ~~ s:g/<[\s\x[00ad]]>//;
 #+END_SRC
 
+**** other zero width chars
+*****  William Michels : \c[ZERO WIDTH SPACE]
+*****  From Bruce Gray : https://www.ptiglobal.com/2018/04/26/the-beauty-of-unicode-zero-width-characters/
+
+
+
+
 ** ongoing
 *** programming in the large (david christensen)
 **** larger applications
